@@ -101,6 +101,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12542) Added hooks for expansion of Special:Listusers
 * Added new variable $wgSharedDBtables for altering the list of tables which are
   shared when $wgSharedDB is enabled.
+* Drop-down AJAX search suggestions (turn on $wgEnableMWSuggest) 
+* More relevant search snippets (turn on $wgAdvancedSearchHighlighting)
 
 === Bug fixes in 1.13 ===
 
